--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
-    "title": "Stripper",
+    "title": "Monokai Dark Juice",
     "name": "stripper-theme",
     "description": "A brackets theme focused on readabiity.",
-    "version": "0.1.0",
-    "author": "Bruce McElroy <bruce.mcelroy@gmail.com>",
-    "homepage": "https://github.com/visualbam/Brackets-Stripper",
+    "version": "0.1.1",
+    "author": "Jacob H <jacobsteen@gmail.com>",
+    "homepage": "https://github.com/uniphonic/Brackets-Juice",
     "repository": {
         "type": "git",
-        "url": "https://github.com/Visualbam/Brackets-Stripper"
+        "url": "https://github.com/uniphonic/Brackets-Juice"
     },
     "license": "MIT",
     "engines": {
