--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "title": "Monokai Dark Juice",
-    "name": "stripper-theme",
+    "name": "juice-theme",
     "description": "A brackets theme focused on readabiity.",
     "version": "0.1.1",
     "author": "Jacob H <jacobsteen@gmail.com>",
